--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="text">
           
           <h1>Jessica Randall</h1>
-          <h5>London, United Kingdom</h5>      
+          <p>London, United Kingdom</p>      
           <p>"Front-end developer and avid reader."</p>
               
         </div>   
