--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <link href="https://fonts.googleapis.com/css2?family=Figtree:ital,wght@0,300..900;1,300..900&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Outfit:wght@100..900&display=swap" rel="stylesheet">
- <link rel="stylesheet" href="/styles.css">
+ <link rel="stylesheet" href="./styles.css">
   <title>Frontend Mentor | Social links profile</title>
 </head>
 <body>
   <Main>
     <div class="container">
       <div class="card">
-        <img src="/assets/images/avatar-jessica.jpeg" alt="">
+        <img src="./assets/images/avatar-jessica.jpeg" alt="">
         <div class="text">
           
           <h1>Jessica Randall</h1>
